--- a/QRcodePage.html
+++ b/QRcodePage.html
@@ -14,7 +14,7 @@
     <input type="text" id="surname" required><br><br>
     <label for="email">Email:</label>
     <input type="text" id="email" required><br><br>
-    <input type="lista eventi" id="list"><br><br>
+    SESSOOOO
     <button id="generateBtn" onclick = "qr();">Registrati</button>
   </div>
     <div id="qrcode"></div>
