--- a/QRcodePage.html
+++ b/QRcodePage.html
@@ -26,28 +26,4 @@
 </html>
 
 <html>
-
-<head>
-    <title>Generatore QR code</title>
-    <script src="qrcode.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js"></script>
-    <script src="script.js"></script>
-    <link rel="stylesheet" href="styleQRpage.css">
-</head>
-
-<body>
-    <div class="form">
-        <label for="name">Nome:</label>
-        <input type="text" id="name" required><br><br>
-        <label for="surname">Cognome:</label>
-        <input type="text" id="surname" required><br><br>
-        <label for="email">Email:</label>
-        <input type="text" id="email" required><br><br>
-
-        <button id="generateBtn" onclick="qr();">Registrati</button>
-    </div>
-    <div id="qrcode"></div>
-    <button id="downloadBtn" disabled>Download</button>
-</body>
-
-</html>
+<!--sdvkjbjbsvbsvobjàsvnèsovjbèbjsvjb-->
