--- a/QRcodePage.html
+++ b/QRcodePage.html
@@ -1,20 +1,26 @@
 <html>
-
 <head>
-    <title>Generatore QR code</title>
+    <title>Login page (local)</title>
     <script src="qrcode.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js"></script>
-    <script src="script.js"></script>
-    <link rel="stylesheet" href="styleQRpage.css">
-  </head>
-  <body>
+    <script src="scriptLocal.js"></script>
+    <link rel="stylesheet" href="styleLocal.css">
+</head>
+<body>
   <div class = "form">
     <label for="name">Nome:</label>
     <input type="text" id="name" required><br><br>
     <label for="surname">Cognome:</label>
     <input type="text" id="surname" required><br><br>
-    <label for="email">Email:</label>
-    <input type="text" id="email" required><br><br>
-    SESSOOOO
+    <label for="birth">Data di nascita:</label>
+    <input type="date" id="birth" required><br><br>
+    <label for="email">Indirizzo email:</label>
+    <input type="email" id="email" name="email" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" title="Inserisci un indirizzo email valido"><br><br>
     <button id="generateBtn" onclick = "qr();">Registrati</button>
   </div>
+  <div id = "container">
+    <div id = "qrcode"></div>
+    <button id = "downloadBtn" disabled>Download</button>
+  </div>
+</body>
+</html>
