--- a/QRcodePage.html
+++ b/QRcodePage.html
@@ -3,8 +3,8 @@
     <title>Login page (local)</title>
     <script src="qrcode.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js"></script>
-    <script src="scriptLocal.js"></script>
-    <link rel="stylesheet" href="styleLocal.css">
+    <script src="script.js"></script>
+    <link rel="stylesheet" href="styleQRpage.css">
 </head>
 <body>
   <div class = "form">
